--- a/package.json
+++ b/package.json
@@ -2,25 +2,64 @@
   "name": "eztv",
   "version": "0.0.10",
   "description": "EZTV API",
+  "homepage": "http://github.com/moesalih/node-eztv",
+  "repository": "git://github.com/moesalih/node-eztv.git",
+  "author": "Moe Salih <moe.salih@gmail.com>",
+  "license": "MIT",
+  "main": "index.js",
   "keywords": [
     "eztv",
     "api",
     "torrents"
   ],
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/moesalih/node-eztv.git"
+  "scripts": {
+    "test": "cross-env NODE_ENV=test mocha --bail --timeout 30000 --inline-diffs --async-only --growl --compilers js:babel-register --recursive --require ./test/setup.js test/*.spec.js",
+    "test-all": "cross-env NODE_ENV=test npm-check --production && npm run lint && npm run test && npm run build",
+    "build": "cross-env NODE_ENV=production babel src --out-dir lib && npm run build-web",
+    "build-web": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.js --progress --profile --colors --display-error-details",
+    "clean": "rm -rf lib",
+    "precommit": "npm run test-all",
+    "lint": "cross-env NODE_ENV=test eslint src test --fix",
+    "preversion": "npm run build"
   },
-  "author": "Moe Salih <moe.salih@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/moesalih/node-eztv/issues"
+  "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-eslint": "^7.0.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.12.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.16.3",
+    "chai": "^3.5.0",
+    "cross-env": "^3.0.0",
+    "eslint": "^3.7.0",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-flowtype-errors": "^1.2.3",
+    "eslint-plugin-immutable": "^1.0.0",
+    "eslint-plugin-import": "^2.0.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
+    "husky": "^0.11.8",
+    "json-loader": "^0.5.4",
+    "mocha": "^2.1.0",
+    "npm-check": "^5.2.3",
+    "webpack": "^1.13.2"
   },
-  "homepage": "https://github.com/moesalih/node-eztv",
   "dependencies": {
-    "request": "^2.34.0",
+    "babel-runtime": "^6.11.6",
     "cheerio": "^0.13.1",
+    "isomorphic-fetch": "^2.2.1",
     "string": "^1.8.0"
+  },
+  "engines": {
+    "node": "4.x || 6.x",
+    "npm": "2.x || 3.x"
+  },
+  "devEngines": {
+    "node": "4.x || 6.x",
+    "npm": "3.x"
   }
 }
