--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "rm -rf lib",
     "lint": "cross-env NODE_ENV=test eslint src test --fix",
     "preversion": "npm run build",
-    "spec": "cross-env NODE_ENV=test mocha --bail --inline-diffs --async-only --growl --compilers js:babel-register --recursive test/*.spec.js",
+    "spec": "cross-env NODE_ENV=test mocha --timeout 10000 --bail --inline-diffs --async-only --growl --compilers js:babel-register --recursive test/*.spec.js",
     "test": "cross-env NODE_ENV=test npm run lint && npm run build && npm run spec"
   },
   "devDependencies": {
@@ -36,6 +36,14 @@
     "cross-env": "^3.1.1",
     "eslint": "^3.7.1",
     "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-flowtype": "^2.19.0",
+    "eslint-plugin-flowtype-errors": "1.3.0",
+    "eslint-plugin-fp": "^2.2.0",
+    "eslint-plugin-import": "^2.0.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-mocha": "^4.5.1",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-react": "^6.3.0",
     "eslint-plugin-flowtype-errors": "^1.3.0",
     "eslint-plugin-immutable": "^1.0.0",
     "eslint-plugin-import": "^2.0.0",
