--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "rm -rf lib",
     "lint": "cross-env NODE_ENV=test eslint src test --fix",
     "preversion": "npm run build",
-    "spec": "cross-env NODE_ENV=test mocha --timeout 10000 --bail --inline-diffs --async-only --growl --compilers js:babel-register --recursive test/*.spec.js",
+    "spec": "cross-env NODE_ENV=test mocha --retries 1 --timeout 10000 --bail --inline-diffs --async-only --growl --compilers js:babel-register --recursive test/*.spec.js",
     "test": "cross-env NODE_ENV=test npm run lint && npm run build && npm run spec"
   },
   "devDependencies": {
@@ -51,7 +51,7 @@
     "eslint-plugin-react": "^6.3.0",
     "husky": "^0.11.8",
     "json-loader": "^0.5.4",
-    "mocha": "^3.1.0",
+    "mocha": "^2.1.0",
     "webpack": "^1.13.2"
   },
   "dependencies": {
